--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 }
 
 .second-title {
-  font-size: 40px;
-  color: #fff;
+  font-size: 30px;
+  color: #060606;
   font-family: 'PT Sans';
   font-weight: bold;
   text-transform: capitalize;
@@ -23,7 +23,7 @@
   border-bottom: 2px solid #f1f1f1;
   padding: 1.5em 0;
   opacity: .7;
-  background: #4B0082;
+  background: #F6E5FD;
   text-align: center;
   border: 0px solid #000;
 }
@@ -31,9 +31,9 @@
 /*byline for my name*/
 
 .byline {
-  font-size: 1em;
+  font-size: .7em;
   text-transform: uppercase;
-  color: #fff;
+  color: #060606;
   font-family: 'PT Sans';
   text-align: center;
   font-weight: bold;
@@ -46,31 +46,39 @@
   border-bottom: 2px solid #f1f1f1;
   padding: 1.5em 0;
   opacity: .7;
-  background: #4B0082;
+  background: #F6E5FD;
   border: 0px solid #000;
 }
 
 .container {
-  font-size: 1.4em;
-  color: #4B0082;
+  font-size: 1em;
+  color: #060606;
   font-family: 'PT Sans';
   font-weight: normal;
+
 
   .italic {
   font-size: 1em;
-  color: #4B0082;
-  font-family: 'PT Sans';
-  font-style: italic;
-  font-weight: normal;
-  }
-
-  .italic1 {
-  font-size: 1em;
-  color: #4B0082;
+  color: #060606;
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: bold;
   }
+  /* large quote at beginning */
+
+  .quote {
+  font-family: 'PT Sans';
+  color: #060606;
+  font-size: 1em;
+  font-weight: 700;
+  text-align: center;
+  padding: 15px 0 15px 0;
+  border-top: 1px solid #4B0082;
+  border-bottom: 1px solid #4B0082;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-width: medium;
+}
 
   /*footer styles*/
 
